Fixed Preview button being cropped

--- a/static/css/components/search-result-item.less
+++ b/static/css/components/search-result-item.less
@@ -126,7 +126,7 @@
     width: 100%;
     margin: 10px 10px 0 5px;
     text-align: center;
-    overflow: hidden;
+    overflow: visible;
     img {
       border-radius: 4px;
       max-width: 100%;
